# DzakSamHackathon

./: .env  .env.example  .firebaserc  .gitignore  .replit  IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  README.md  firebase.json  index.html  pyproject.toml  replit.md  script.js  start_backend.sh  start_frontend.sh
.github/workflows/: defender-for-devops.yml  firebase-deploy.yml  vercel-deploy.yml
Back_end/: server.js
backend/: .env.example  __init__.py  adventures.py  auth.py  data_store.py  lessons.py  main.py  requirements.txt  spoon_agent.py
front_end/: index.html  style.css
frontend/: .env.example  .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AuthRequired.tsx  BadgeCard.tsx  CodeInput.tsx  ContractCodeBlock.tsx  ExplainableCode.tsx  ExplanationPanel.tsx  ModuleCard.tsx  Navbar.tsx  Quiz.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: About.tsx  AdventureMode.tsx  Adventures.tsx  AuthCallback.tsx  Chat.tsx  CodeExplainer.tsx  Home.tsx  Learn.tsx  Lesson.tsx  Login.tsx  Module.tsx  Onboarding.tsx  Progress.tsx
functions/: package-lock.json  package.json
functions/src/: index.ts
